fix: bg color & view of main footer on mobile

--- a/front/src/app/core/layouts/main/style.scss
+++ b/front/src/app/core/layouts/main/style.scss
@@ -12,7 +12,7 @@ ion-footer {
   bottom: 0;
 }
 
-.header-space {
-  // size of header
-  height: 56px;
-}
+//.header-space {
+//  // size of header
+//  height: 56px;
+//}
