--- a/front/src/app/modules/search/pages/search/search-mobile/search-mobile.component.scss
+++ b/front/src/app/modules/search/pages/search/search-mobile/search-mobile.component.scss
@@ -2,7 +2,7 @@
 @import "extendables";
 
 .SearchPage {
-  background-color: $mainBgColor;
+  background-color: $dashboardMobileBg;
   mat-progress-bar {
     &.hide {
       opacity: 0;
@@ -13,7 +13,7 @@
     position: sticky;
     top: 0;
     z-index: 500;
-    background-color: #f5f5f5;
+    background-color: $dashboardMobileBg;
   }
 
   &-content {
